--- a/mafc-app/src/globalStyles/variables.scss
+++ b/mafc-app/src/globalStyles/variables.scss
@@ -6,19 +6,22 @@ $primary-font: 'Montserrat', sans-serif;
 
 
 // Colors
-$primary-text-color: #1f2224;
+$primary-text-color: #222;
 $second-text-color: #737373;
+$dark_bg: #191e24;
+$section_bg: #f7f7f7;
 $light-text-color: #fff;
 $primaryBG: #FFFFFF;
 $secondaryBG: #fafafa;
 $dark: #252b42;
 $dack-accent-color:  #16697a;
 $accent-color: #00a0c1;
-$secondary-color: #ffa62b;
+$secondary-color: #ff7f46;
+$overlay: rgba(26, 26, 26, 0.50);
 
 
 
-
+$box_shadow: rgba(99, 99, 99, .2) 0px 2px 8px 0px;
 $card-shadow: 0 13px 19px 0 rgba(0, 0, 0, 0.07);
 $filter: drop-shadow(0px 0px 1px #ffffff);
 
