--- a/mafc-app/src/globalStyles/main.scss
+++ b/mafc-app/src/globalStyles/main.scss
@@ -4,11 +4,12 @@
 * {
   box-sizing: border-box;
 }
-
+html{
+  font-size: 16px;
+}
 body {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   position: relative;
   min-height: 100vh;
   width: 100vw;
@@ -17,8 +18,6 @@ body {
   background-color: $primaryBG;
   font-family: 'Montserrat';
   color: $primary-text-color;
-  font-size: 16px;
-  letter-spacing: 0.03em;
   line-height: 1.1;
   
 }
@@ -44,6 +43,13 @@ a {
 img {
   display: block;
   width: 100%;
+}
+
+button{
+  background-color: transparent;
+  border: none;
+  padding: 0;
+  cursor: pointer;
 }
 
 .ck-placeholder{
