--- a/mafc-app/src/globalStyles/variables.scss
+++ b/mafc-app/src/globalStyles/variables.scss
@@ -10,6 +10,7 @@ $primary-text-color: #222;
 $second-text-color: #737373;
 $dark_bg: #191e24;
 $section_bg: #f7f7f7;
+$top_bar_bg: #121634;
 $light-text-color: #fff;
 $primaryBG: #FFFFFF;
 $secondaryBG: #fafafa;
