--- a/mafc-app/src/components/elements/NewsItem/news_item.module.scss
+++ b/mafc-app/src/components/elements/NewsItem/news_item.module.scss
@@ -8,12 +8,12 @@
     cursor: pointer;
     transition: scale $cubic;
 
-    &:hover{
-        scale: 1.01;
-    }
-
     &:hover .description_box > h3{
         color: $secondary-color;
+    }
+
+    &:hover .thumb .image{
+     transform: scale(1.02);
     }
 }
 .description_box{
@@ -28,12 +28,15 @@
     width: 100%;
     height:auto;
     object-fit: cover;
+    overflow: hidden;
 };
 
 .image{
     display: block;
     width: 100%;
     height: auto;
+
+    transition: transform $cubic;
 }
 
 
