--- a/mafc-app/src/components/modules/news/news.module.scss
+++ b/mafc-app/src/components/modules/news/news.module.scss
@@ -5,12 +5,18 @@
     background-color: $section_bg;
 };
 
+.center_box{
+display: flex;
+flex-direction: column;
+gap: 2.5rem;
+align-items: center;
+}
+
 .head_container{
     display: flex;
     flex-direction: column;
     gap: 1rem;
     align-items: center;
-    margin-bottom: 2.5rem;
 }
 
 .title{
@@ -29,4 +35,26 @@
             grid-area: 1 / 1 / 4 / 2; 
         }
     }
+};
+
+
+.more_button{
+    display: inline-block;
+    margin: 0 auto;
+    padding: 15px 35px;
+    background: $secondary-color;
+    color: $light-text-color;
+    text-transform: uppercase;
+    font-size: 1rem;
+    font-weight: 600;
+   
+    border-radius: 30px;
+
+    transition: transform $cubic, text-shadow $cubic;
+   
+    &:hover{
+        transform: scale(1.01);
+        text-shadow: 0px 0px 1px #ffffff;
+    }
+    
 }
