--- a/mafc-app/src/globalStyles/main.scss
+++ b/mafc-app/src/globalStyles/main.scss
@@ -15,7 +15,7 @@ body {
   width: 100vw;
   margin: 0;
   overflow-x: hidden;
-  background-color: $primaryBG;
+  background-color: $section_bg;
   font-family: 'Montserrat';
   color: $primary-text-color;
   line-height: 1.1;
