--- a/mafc-app/src/components/elements/DocumentsList/documents_list.module.scss
+++ b/mafc-app/src/components/elements/DocumentsList/documents_list.module.scss
@@ -3,6 +3,11 @@
 
 .list {
     padding: 0;
+    &.double{
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      column-gap: 5rem;
+    }
   }
   
   .item {
