add subject commission page

--- a/mafc-app/src/globalStyles/main.scss
+++ b/mafc-app/src/globalStyles/main.scss
@@ -23,6 +23,14 @@ body {
   line-height: 1.1;
   
 }
+
+section{
+  padding: 7rem 0;
+
+  &:nth-child(even){
+    background-color: $primaryBG;
+  }
+};
 //    Style none
 ul {
   list-style: none;
