--- a/mafc-app/src/components/modules/news/news.module.scss
+++ b/mafc-app/src/components/modules/news/news.module.scss
@@ -17,10 +17,15 @@ align-items: center;
     flex-direction: column;
     gap: 1rem;
     align-items: center;
+
+    & p{
+        text-transform: uppercase;
+    }
 }
 
 .title{
     font-size: 3rem;
+    text-transform: uppercase;
 }
 
 .news_list{
