add submit to form

--- a/mafc-app/src/components/elements/contactForm/contact_form.module.scss
+++ b/mafc-app/src/components/elements/contactForm/contact_form.module.scss
@@ -33,7 +33,7 @@
         &:-webkit-autofill:hover, 
         &:-webkit-autofill:focus {
           -webkit-text-fill-color: $primary-text-color !important;
-          -webkit-box-shadow: 0 0 0px 40rem #1F2224 inset !important;
+          -webkit-box-shadow: 0 0 0px 40rem #feffff inset !important;
          
         }
          &.not_valid{
