--- a/mafc-app/src/components/elements/contactForm/contact_form.module.scss
+++ b/mafc-app/src/components/elements/contactForm/contact_form.module.scss
@@ -1,5 +1,36 @@
 @use '../../../globalStyles/variables.scss' as *;
 
+.form_container{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding: 6rem 6rem;
+    background-color: $primaryBG;
+    font-size: 0.8rem;
+    color: $primary-text-color;
+    text-align: center;
+    text-transform: uppercase;
+
+    & h3{
+        font-size: 2rem;
+        font-weight: 700;
+    }
+}
+
+.overlay{
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: $overlay;
+    z-index: 2;
+ 
+}
 
 .form{
     display: flex;
